# distributed-minimax

./: .gitignore  CMakeLists.txt
configuration_system/: app.py
hw_control/: CMakeLists.txt  main.c  test_checking.c  test_ids.c  test_shutdown.c  test_states.c
hw_control/include/: HWController.h
hw_control/src/: CMakeLists.txt  HWController.c  Makefile  push_button_mod.c
include/: configuration.h
include/chess/: chess.h
include/evaluation/: evaluation.h
include/minimax/: minimax.h
include/network/: messages.h  network.h
include/reports/: reports.h
report_system/: app.py
src/: CMakeLists.txt  configuration.c  main.c  test_cjson.c  test_network.c
src/chess/: chess.c
src/evaluation/: evaluation.c
src/minimax/: minimax.c
src/network/: messages.c  network.c
src/reports/: reports.c
